--- a/balao.css
+++ b/balao.css
@@ -266,14 +266,7 @@ footer {
 
 }
 
-.img-line {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
 
-}
 
 .sociais {
     padding: 0.5rem;
@@ -291,6 +284,15 @@ footer {
 
     color: black;
     transition: 0.8s;
+
+}
+
+.img-line {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 
 }
 
@@ -345,16 +347,15 @@ footer {
     }
 
     .hambuerger {
-        display: block;
-        background: none;
-        border: none;
+        display: flex;
+        padding: 0.9rem;
+        background: transparent;
         color: white;
         font-size: 1.5rem;
     }
 
     .ul-list {
-        flex-direction: column;
-        gap: 15px;
+        display: none;
     }
 
     /* Conteúdo principal */
